--- a/miniprogram/pages/ItemBank/ItemBank.wxss
+++ b/miniprogram/pages/ItemBank/ItemBank.wxss
@@ -21,6 +21,31 @@
    border-bottom: 2rpx solid #3333;
 }
 .isShow{
+   /* transition: 0s; */
+    transition: all 0.1s ease-in-out;
+    /* transform: scale(0); */
   background: red;
-  color: #fff
+  color: #fff;
+
+  
 }
+/* 水波纹 */
+/* .bubble:after{
+ content: "";
+ background: #999;
+ position: absolute; 
+ width: 750rpx;
+ height: 750rpx;
+ left: calc(50% - 375rpx);
+ top: calc(50% - 375rpx);
+ opacity: 0;
+ margin: auto;
+ border-radius: 50%;
+ transform: scale(1);
+ transition: all 0.4s ease-in-out;
+}
+.bubble:active:after {
+ transform: scale(0);
+ opacity: 1;
+ transition: 0s;
+} */
