--- a/miniprogram/pages/answer/answer.wxml
+++ b/miniprogram/pages/answer/answer.wxml
@@ -1,4 +1,5 @@
 <!--pages/home/home.wxml-->
+<view class="box">
 <swiper class="screen-swiper square-dot" indicator-dots="true" circular="true" autoplay="true" interval="5000" duration="500">
   <swiper-item wx:for="{{swiperList}}" wx:key="index">
     <image src="{{item.urlImg}}" mode="aspectFill"></image>
@@ -10,4 +11,4 @@
 <view class="bthC">
   <button wx:for="{{list}}" wx:key="index" class="cu-btn round bg-{{item.color}} shadow" bindtap="BthClick" data-data="{{item}}">{{item.name}}</button>
   </view>
-  
+  </view>
