--- a/miniprogram/pages/answer/answer.wxss
+++ b/miniprogram/pages/answer/answer.wxss
@@ -1,17 +1,26 @@
 /* pages/home/home.wxss */
+.box{
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+    flex-direction: column
+}
 .ChoiceTop{
+ 
   font-size: 50rpx;
   line-height: 120rpx;
   font-weight: bold;
   letter-spacing:8rpx
 }
 .bthC{
+   flex: 1;
   display: flex;
-  flex-direction: column
+  flex-direction: column;
+  width: 100%
 }
 .bthC .cu-btn{
-  margin-top: 40rpx;
-  height: 100rpx
+  margin-top: 30rpx;
+  height: 80rpx
 }
 .aniamtion {
   animation: mymove  3s ease;
