--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -1,13 +1,9 @@
 <!--pages/user/user.wxml-->
 <scroll-view scroll-y class="scrollPage">
   <view class="UCenter-bg">
-    <!-- <image src="https://wx.qlogo.cn/mmopen/vi_32/DYAIOgq83epOj0AqJH0Liawhx9ReF8SIBiaqg3uLgMcEhdCPC3UibhEpDGX4llmPogbY8LL6C6RZnia1sgwFI6Q37A/132" class="png" mode="widthFix"></image>
-    <text>旺旺</text>
-   -->
-
     <open-data type="userAvatarUrl" class="png"></open-data>
     <open-data type="userNickName" class="Textpng"></open-data>
-      <image src="https://raw.githubusercontent.com/weilanwl/ColorUI/master/demo/images/wave.gif" mode="scaleToFill" class="gif-wave"></image>
+    <image src="https://raw.githubusercontent.com/weilanwl/ColorUI/master/demo/images/wave.gif" mode="scaleToFill" class="gif-wave"></image>
   </view>
   <view class="padding flex text-center text-grey bg-white shadow-warp">
     <view class="flex flex-sub flex-direction solid-right">
@@ -39,11 +35,38 @@
         <text class="text-grey">赞赏支持</text>
       </view>
     </view>
+    <view class="cu-modal {{ImageShow?'show':''}}">
+      <view class="cu-dialog">
+        <view class="bg-img" style="background-image: url('../../images/zhifu.png')">
+          <view class="cu-bar justify-end text-white">
+            <view class="action" bindtap="hideModal">
+              <text class="cuIcon-close "></text>
+            </view>
+          </view>
+        </view>
+        <view class="cu-bar bg-white">
+          <view class="action margin-0 flex-sub fontBai solid-left" bindtap="hideModal">我不想支持了~</view>
+        </view>
+      </view>
+    </view>
     <view class="cu-item arrow">
-      <button class="cu-btn content" open-type="feedback">
+      <button class="cu-btn content" bindtap="arrowShow">
         <text class="cuIcon-writefill text-cyan"></text>
         <text class="text-grey">意见反馈</text>
       </button>
+    </view>
+    <view class="cu-modal {{arrow?'show':''}}">
+      <view class="cu-dialog">
+        <view class="cu-bar bg-white justify-end">
+          <view class="content">意见反馈</view>
+          <view class="action" bindtap="hideModal">
+            <text class="cuIcon-close text-red"></text>
+          </view>
+        </view>
+        <view class="padding-xl arrowStyle">
+          不好意思，我们暂不接受任何形式的意见！
+        </view>
+      </view>
     </view>
     <view class="cu-item arrow">
       <navigator class="content" url="/pages/about/test/list" hover-class="none">
