--- a/miniprogram/pages/ranking/ranking.wxss
+++ b/miniprogram/pages/ranking/ranking.wxss
@@ -1,1 +1,58 @@
-/* pages/ranking/ranking.wxss */
+.titleOne{
+  font-size: 60rpx;
+  color: #D9D919
+}
+.titleTow{
+  font-size: 60rpx;
+  color: #B87333
+}
+.titleThree{
+   font-size: 60rpx;
+  color: silver
+}
+.box{
+  display: flex;
+  height: 200rpx;
+  align-items: center;
+  border-top: 2rpx dashed LightBLue
+}
+.paiming{
+  width: 60rpx;
+  text-align: center;
+  font-size: 40rpx;
+  font-weight: bold
+}
+.imgh{
+  width: 130rpx;
+  height: 130rpx;
+  border-radius: 50%;
+  margin-left: 40rpx
+}
+.fontBox{
+  height: 100%;
+  box-sizing: border-box;
+  padding: 30rpx 30rpx;
+  width: 65%;
+}
+.fontClass{
+  font-size: 45rpx;
+  font-weight: bold
+}
+.favor{
+  font-size: 35rpx;
+  color: GreenYellow;
+  text-align: right
+}
+.topFont{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.bottomFont{
+  text-align: right;
+  font-size: 30rpx;
+  color: #333;
+  margin-top: 30rpx;
+  font-weight: bold
+}
