--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -1,7 +1,17 @@
-
-
 <!-- 需要使用 button 来授权登录 -->
 
-<button wx:if="{{canIUse}}" open-type="getUserInfo" type="primary" bindgetuserinfo="getInfo">授权登录</button>
+<view class="bigBox" >
 
+<view class="box" >
+	<open-data type="userAvatarUrl" class="png"></open-data>
+
+</view>
+<view class="Textpng">
+	<open-data type="userNickName" ></open-data>
+</view>
+<button wx:if="{{canIUse}}" open-type="getUserInfo" class="cu-btn round" bindgetuserinfo="getInfo" >授权登录</button>
 <view wx:else>请升级微信版本</view>
+<view>
+</view>
+<image></image>
+</view>
