--- a/miniprogram/pages/login/login.wxss
+++ b/miniprogram/pages/login/login.wxss
@@ -1,1 +1,43 @@
 /* miniprogram/pages/login/login.wxss */
+.box{
+  width: 250rpx;
+  height: 250rpx;
+  border-radius: 50%;
+  background: red;
+  animation: load8 4s infinite linear; 
+  overflow: hidden;
+  margin: 40rpx auto;
+  margin-top: 280rpx;
+}
+.bigBox{
+  width: 100%;
+  height: 100vh;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-image: url(https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1585664304460&di=1656bddd0a34d25157ea78ef8db3941c&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fitem%2F201812%2F29%2F20181229184512_rkcnn.jpg);
+  display: flex;
+  flex-direction: column;
+
+}
+.box .png{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+@keyframes load8 {     
+  0% {     
+    -webkit-transform: rotate(0deg);     
+    transform: rotate(0deg);     
+  }     
+  100% {     
+    -webkit-transform: rotate(360deg);     
+    transform: rotate(360deg);     
+  }     
+} 
+.Textpng{
+  font-size: 50rpx;
+  line-height: 120rpx;
+  font-weight: bold;
+  color: #fff;
+  text-align: center;
+}
