--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -3,11 +3,10 @@
 <view class="bigBox" >
 
 <view class="box" >
-	<open-data type="userAvatarUrl" class="png"></open-data>
-
+<image src="../../images/logo.jpg" class="png"></image>
 </view>
 <view class="Textpng">
-	<open-data type="userNickName" ></open-data>
+	<text>前端100，go！go！go！</text>
 </view>
 <button wx:if="{{canIUse}}" open-type="getUserInfo" class="cu-btn round" bindgetuserinfo="getInfo" >微信登录</button>
 <view wx:else>请升级微信版本</view>
