--- a/miniprogram/pages/login/login.wxss
+++ b/miniprogram/pages/login/login.wxss
@@ -1,13 +1,10 @@
 /* miniprogram/pages/login/login.wxss */
 .box{
-  width: 250rpx;
-  height: 250rpx;
-  border-radius: 50%;
-  background: red;
+  width: 200rpx;
+  height: 200rpx;
   animation: load8 4s infinite linear; 
   overflow: hidden;
-  margin: 40rpx auto;
-  margin-top: 280rpx;
+  margin-top: 40%;
 }
 .bigBox{
   width: 100%;
@@ -17,12 +14,14 @@
   background-image: url(https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1585664304460&di=1656bddd0a34d25157ea78ef8db3941c&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fitem%2F201812%2F29%2F20181229184512_rkcnn.jpg);
   display: flex;
   flex-direction: column;
-
+  justify-content: center;
+  align-items: center;
 }
 .box .png{
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  display: inline-block;
 }
 @keyframes load8 {     
   0% {     
@@ -35,7 +34,7 @@
   }     
 } 
 .Textpng{
-  font-size: 50rpx;
+  font-size: 30rpx;
   line-height: 120rpx;
   font-weight: bold;
   color: #fff;
@@ -43,4 +42,5 @@
 }
 .boxBottm{
   margin:0 auto;
+  margin-top: 100rpx;
 }
