--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -1,14 +1,15 @@
 <!--pages/user/user.wxml-->
 <scroll-view scroll-y class="scrollPage">
 	<view class="UCenter-bg">
-	
-	
+
+
 		<!-- <open-data type="userAvatarUrl" class="png"></open-data> -->
 		<!-- <open-data type="userNickName" class="Textpng"></open-data> -->
-		<image src="{{isShow?info.avatarUrl:'../../images/logo.jpg'}} " class="" style="border-radius:50%"></image>
-    <view wx:if="{{isShow}}" class="Textpng">{{userName}}</view>
-		<button bindtap="userinfo" style="color:#fff;margin-top:20rpx" wx:else>登录答题</button>
-    	
+		<image wx:if="{{isShow}}" src="{{info.avatarUrl}}" style="border-radius:50%"></image>
+		<image wx:else src="../../images/logo.jpg " style="border-radius:50%" bindtap="userinfo"></image>
+		<view wx:if="{{isShow}}" class="Textpng">{{userName}}</view>
+		<button bindtap="userinfo" style="color:#fff;margin-top:20rpx" wx:else>请登录后再答题</button>
+
 		<image src="https://raw.githubusercontent.com/weilanwl/ColorUI/master/demo/images/wave.gif" mode="scaleToFill" class="gif-wave"></image>
 	</view>
 	<view class="padding flex text-center text-grey bg-white shadow-warp">
