--- a/miniprogram/pages/ItemBank/ItemBank.wxss
+++ b/miniprogram/pages/ItemBank/ItemBank.wxss
@@ -1,24 +1,27 @@
 .box{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   box-sizing: border-box;
-  padding: 20rpx 0
+  padding: 20rpx 20rpx;
 }
 .title{
   width: 100%;
-  height: 100rpx;
   font-size: 35rpx;
-  line-height: 100rpx;
-  color: #000
+  color: #000;
+  text-indent: 30rpx;
 }
 .min{
-  background: #fff;
-  font-size: 25rpx;
+  background: #E6F4FF;
+  color: #222;
+  font-weight: bold;
+  font-size: 30rpx;
   padding: 30rpx 0;
+  border-radius: 40rpx;
+  margin-top: 50rpx;
   display: flex;
-  text-indent: 20rpx;
+  text-indent: 60rpx;
   align-items: center;
-   border-bottom: 2rpx solid #3333;
+  border-bottom: 2rpx solid #3333;
 }
 .isShow{
    /* transition: 0s; */
@@ -26,8 +29,101 @@
     /* transform: scale(0); */
   background: red;
   color: #fff;
-
-  
+}
+.titleTop{
+  text-align: center;
+  line-height: 60rpx;
+  font-size: 50rpx;
+  font-weight: bold;
+  color: red;
+  margin-bottom: 10rpx;
+}
+.topText{
+  text-align: center;
+  line-height: 30rpx;
+  font-size: 20rpx;
+  font-weight: bold;
+  color: red;
+  margin-bottom: 70rpx;
+}
+.userAvata{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 40rpx;
+}
+.userAvata .Textpng{
+  font-size: 35rpx;
+  line-height: 50rpx;
+  color: #222;
+  font-weight: bold;
+  display: block;
+  margin-top: 20rpx;
+}
+.userinfo-avatar{
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 50%;
+  overflow: hidden;
+  display: block;
+  margin:0 auto;
+}
+.userinfoMin{
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 50%;
+  overflow: hidden;
+  display: block;
+}
+.TextpngMin{
+  text-align: center;
+  display: block;
+  font-weight: bold;
+}
+.startBank{
+  text-align: center;
+  font-size: 30rpx;
+  font-weight: bold;
+  margin-bottom: 20rpx;
+}
+.listBox{
+  margin-top: 50rpx;
+  font-size: 30rpx;
+  line-height:30rpx;
+  font-weight: bold;
+  color: red;
+  text-align: center;
+}
+.bthStart{
+  width: 60%;
+  margin:100rpx auto;
+  height: 80rpx;
+  text-align: center;
+  line-height: 80rpx;
+  font-size: 30rpx;
+  border: 2rpx solid #fff;
+  border-radius:10rpx;
+  background: #fff;
+}
+.titleBox{
+  display: flex;
+  align-items: center;
+  padding: 20rpx 40rpx;
+}
+.Question{
+  font-size: 60rpx;
+  font-weight: bold;
+  color: #222;
+  margin-left: 20%;
+  letter-spacing:16rpx
+}
+.QuestionNumber{
+  text-align: right;
+  font-size: 30rpx;
+}
+.cu-progress.sm{
+  height: 26rpx;
 }
 /* 水波纹 */
 /* .bubble:after{
