--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -1,59 +1,41 @@
 <!--pages/user/user.wxml-->
 <scroll-view scroll-y class="scrollPage">
 	<view class="UCenter-bg">
-
-
-		<!-- <open-data type="userAvatarUrl" class="png"></open-data> -->
-		<!-- <open-data type="userNickName" class="Textpng"></open-data> -->
-		<image wx:if="{{isShow}}" src="{{info.avatarUrl}}" style="border-radius:50%"></image>
-		<image wx:else src="../../images/logo.jpg " style="border-radius:50%" bindtap="userinfo"></image>
-		<view wx:if="{{isShow}}" class="Textpng">{{userName}}</view>
-		<button bindtap="userinfo" style="color:#fff;margin-top:20rpx" wx:else>请登录后再答题</button>
-
-		<image src="https://raw.githubusercontent.com/weilanwl/ColorUI/master/demo/images/wave.gif" mode="scaleToFill" class="gif-wave"></image>
+		<image src="../../images/111.png " style="border-radius:50%"></image>
+		<view  class="Textpng">七月</view>
 	</view>
 	<view class="padding flex text-center text-grey bg-white shadow-warp">
 		<view class="flex flex-sub flex-direction solid-right">
 			<view class="text-xxl text-orange">{{visitTotal}}</view>
-			<view class="margin-top-sm">
-				<text class="cuIcon-attentionfill"></text>收藏</view>
+			<view>
+			性别：女生</view>
 		</view>
 		<view class="flex flex-sub flex-direction solid-right">
 			<view class="text-xxl text-blue">{{starCount}}</view>
-			<view class="margin-top-sm">
-				<text class="cuIcon-favorfill"></text>排名</view>
+			<view>
+			年龄：0.2岁</view>
 		</view>
 		<view class="flex flex-sub flex-direction" bindtap="fenxiang">
 			<view class="text-xxl text-green">{{forksCount}}</view>
-			<view class="margin-top-sm">
-				<text class="cuIcon-fork"></text>分享</view>
+			<view>
+			体重：2kg</view>
 		</view>
+	</view>
+	<view class="timeBox solids">
+	<text class="topText">我已经陪伴铲屎官</text>
+	<text class="bottomText">{{dayTime}}天{{houre}}小时{{moush}}分</text>
 	</view>
 	<view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg radius">
 		<view class="cu-item arrow">
 			<view class="content" bindtap="CopyLink" data-link="https://github.com/Elisony/webGo--">
 				<text class="cuIcon-github text-grey"></text>
-				<text class="text-grey">GitHub</text>
+				<text class="text-grey">七月的家</text>
 			</view>
 		</view>
 		<view class="cu-item arrow">
 			<view class="content" bindtap="showQrcode">
 				<text class="cuIcon-appreciatefill text-red"></text>
-				<text class="text-grey">赞赏支持</text>
-			</view>
-		</view>
-		<view class="cu-modal {{ImageShow?'show':''}}">
-			<view class="cu-dialog">
-				<view class="bg-img" style="background-image: url('../../images/zhifu.png')">
-					<view class="cu-bar justify-end text-white">
-						<view class="action" bindtap="hideModal">
-							<text class="cuIcon-close "></text>
-						</view>
-					</view>
-				</view>
-				<view class="cu-bar bg-white">
-					<view class="action margin-0 flex-sub fontBai solid-left" bindtap="hideModal">我不想支持了~</view>
-				</view>
+				<text class="text-grey">众筹猫粮</text>
 			</view>
 		</view>
 		<view class="cu-item arrow">
@@ -71,7 +53,7 @@
 					</view>
 				</view>
 				<view class="padding-xl arrowStyle">
-					不好意思，我们暂不接受任何形式的意见！
+					不好意思，本喵暂不接受任何形式的意见！
 				</view>
 			</view>
 		</view>
@@ -84,13 +66,13 @@
 		<view class="cu-modal {{guanyuShow?'show':''}}">
 			<view class="cu-dialog">
 				<view class="cu-bar bg-white justify-end">
-					<view class="content">关于我们</view>
+					<view class="content">关于七月</view>
 					<view class="action" bindtap="hideModal">
 						<text class="cuIcon-close text-red"></text>
 					</view>
 				</view>
 				<view class="padding-xl arrowStyle">
-					开发者们除了帅气和美丽，其他一无所有！
+					本喵除了美丽和可爱，其他一无所有！
 				</view>
 			</view>
 		</view>
