--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -1,7 +1,7 @@
 <!--pages/user/user.wxml-->
 <scroll-view scroll-y class="scrollPage">
 	<view class="UCenter-bg">
-		<image src="../../images/111.png " style="border-radius:50%"></image>
+		<image src="../../images/111.jpg " style="border-radius:50%"></image>
 		<view  class="Textpng">七月</view>
 	</view>
 	<view class="padding flex text-center text-grey bg-white shadow-warp">
@@ -13,12 +13,12 @@
 		<view class="flex flex-sub flex-direction solid-right">
 			<view class="text-xxl text-blue">{{starCount}}</view>
 			<view>
-			年龄：0.2岁</view>
+			年龄：0.8岁</view>
 		</view>
 		<view class="flex flex-sub flex-direction" bindtap="fenxiang">
 			<view class="text-xxl text-green">{{forksCount}}</view>
 			<view>
-			体重：2kg</view>
+			体重：3kg</view>
 		</view>
 	</view>
 	<view class="timeBox solids">
