--- a/miniprogram/pages/user/user.wxss
+++ b/miniprogram/pages/user/user.wxss
@@ -1,7 +1,7 @@
 /* pages/user/user.wxss */
 .UCenter-bg {
-  background-image: url(https://appletsimg.oss-cn-beijing.aliyuncs.com/beijing.jpg);
-  background-size: cover;
+  background-image: url('https://huanuoimg.oss-cn-beijing.aliyuncs.com/222.jpg');
+  background-size: 100%;
   height: 500rpx;
   display: flex;
   justify-content: center;
